hphp/test/quick/zend_indirect_method_call_002.php.expectf
string(3) "foo"
string(7) "testing"
string(3) "foo"
NULL
HipHop Fatal error: Call to undefined method foo::www from anonymous context in %s on line 20
